Fixed signup page, truncate script, hidden discussion text and better looking navbar

--- a/lernanta/static/sass/overrides.scss
+++ b/lernanta/static/sass/overrides.scss
@@ -654,8 +654,9 @@ div.nav-google-search{
     margin-left: pem(26px);
     margin-right: pem(23px);
     &.right-divider {
-      margin-top: pem(6px);
-      margin-left: 0px;
+      margin-top: 10px;
+      margin-left: 16px;
+      margin-right: 16px;
     }
   }
 
